<resources>
    <string name="app_name">Log Data</string>
    <string name="title_activity_main2">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="pick_date">Pick Date :</string>
    <string name="shift">Shift:</string>
    <string name="production">production</string>
    <string name="delay">Delay</string>
    <string name="drive_room">Drive room :</string>
    <string name="temperature">Temperature</string>
    <string name="automation">Automation :</string>
    <string name="mcc_room">Mcc Room :</string>
    <string name="conditional_monitoring">Conditional Monitoring</string>
    <string name="time">Time :</string>
    <string name="chiller_unit_temp">Chiller unit Temp :</string>
    <string name="sample">Sample :</string>
    <string name="value">value</string>
    <string name="hh_mm_ss">HH:MM:SS</string>
    <string name="dd_mm_yy">DD/MM/YY</string>
    <string name="button">Button</string>
    <string-array name="Shift">
        <item>Choose Shift</item>
        <item>A</item>
        <item>B</item>
        <item>C</item>
    </string-array>
</resources>